# GamePrototyping

./: .gitignore  README.md
Source/: CMakeLists.txt
Source/Experiments/: CMakeLists.txt  Experiment.h  Experiment.inl
Source/Experiments/Exp1_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
Source/Game/: CMakeLists.txt  Game.cpp  Game.h  MeshGenerator.cpp  MeshGenerator.h
Source/Urho3D/AngelScript/: ResourceAPI.cpp  ScriptFile.cpp  UIAPI.cpp
Source/Urho3D/Core/: Context.cpp  Timer.cpp
Source/Urho3D/Engine/: Console.cpp
Source/Urho3D/Graphics/: CustomGeometry.cpp  DebugRenderer.cpp
Source/Urho3D/Input/: Input.cpp
Source/Urho3D/Network/: Network.cpp
Source/Urho3D/UI/: BorderImage.cpp  UI.cpp
Urho3D/: README.md
